--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "element-plus": "^2.3.14"
+        "apexcharts": "^3.43.0",
+        "date-fns": "^2.30.0",
+        "element-plus": "^2.3.14",
+        "vue3-apexcharts": "^1.4.4",
+        "vuedraggable": "^4.1.0"
     }
 }
