--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/laravel-medialibrary": "^10.0.0",
+        "spatie/laravel-permission": "^6.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
