--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "apexcharts": "^3.43.0",
         "date-fns": "^2.30.0",
         "element-plus": "^2.3.14",
+        "moment": "^2.29.4",
         "vue3-apexcharts": "^1.4.4",
         "vuedraggable": "^4.1.0"
     }
